--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,49 @@
-version: '3.8'
+version: "3.9"
 
 services:
   db:
-    image: mysql:5.7
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    volumes:
-      - mysql_data:/var/lib/mysql
+    image: mysql:8
+    container_name: mysql_db
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: testdb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
+    volumes:
+      - db_data:/var/lib/mysql                      # <-- ¡Acá se persiste!
+      - ./database/tables.sql:/docker-entrypoint-initdb.d/01_tables.sql
+      - ./database/triggers.sql:/docker-entrypoint-initdb.d/02_triggers.sql
+      - ./database/insertions.sql:/docker-entrypoint-initdb.d/03_insertions.sql
+      - ./database/views.sql:/docker-entrypoint-initdb.d/04_views.sql
     ports:
-      - 3306:3306
+      - "3307:3306"
+
+  backend:
+    build: ./backend
+    container_name: flask_backend
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_USER: user
+      DB_PASSWORD: pass
+      DB_NAME: testdb
+      DB_PORT: 3306
+    ports:
+      - "8080:8080"
+    # expose:
+      # - "8080"  Solo accesible internamente desde frontend
+
+  frontend:
+    build: ./frontend
+    container_name: vite_frontend
+    depends_on:
+      - backend
+    ports:
+      - "5173:5173"
+    environment:
+      VITE_API_URL: http://flask_backend:8080  # Interno en red Docker
 
 volumes:
-  mysql_data:
+  db_data:
