--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,10 @@ FROM node:20
 
 WORKDIR /app
 
-COPY . .
-
+COPY .env .  
+COPY package.json package-lock.json ./
 RUN npm install
 
+COPY . .
 EXPOSE 5173
-
 CMD ["npm", "run", "dev", "--", "--host"]
