--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# JetBrains IDE (WebStorm, IntelliJ, etc.) project config
+.idea/
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
